[package]
name = "egui_boss_picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
env_logger = "0.10.1"
cc = "1.0.83"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"